--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "tslane",
-  "version": "1.2.0",
+  "version": "1.3.0",
   "description": "A template for creating TypeScript libraries",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
@@ -10,7 +10,7 @@
     "bundle:all": "npx webpack",
     "bundle:map": "npx webpack --config-name=map",
     "coverage": "npx jest --collectCoverage",
-    "doc": "typedoc --out docs src",
+    "doc": "npx typedoc --out docs src",
     "format": "npx prettier --parser typescript --write ./src ./tests",
     "lint": "npx eslint . --ext .ts",
     "test": "npx jest"
@@ -19,17 +19,19 @@
   "author": "",
   "license": "GPL3",
   "devDependencies": {
-    "@types/jest": "^26.0.23",
-    "@typescript-eslint/eslint-plugin": "^4.28.0",
-    "@typescript-eslint/parser": "^4.28.0",
-    "eslint": "^7.29.0",
-    "jest": "^27.0.5",
-    "npm-dts-webpack-plugin": "^1.3.7",
-    "prettier": "^2.3.2",
-    "ts-jest": "^27.0.3",
-    "ts-loader": "^9.2.3",
-    "typescript": "^4.3.4",
-    "webpack": "^5.40.0",
-    "webpack-cli": "^4.7.2"
+    "@types/jest": "^29.4.1",
+    "@typescript-eslint/eslint-plugin": "^5.55.0",
+    "@typescript-eslint/parser": "^5.55.0",
+    "eslint": "^8.36.0",
+    "jest": "^29.5.0",
+    "npm-dts-webpack-plugin": "^1.3.12",
+    "prettier": "^2.8.4",
+    "ts-jest": "^29.0.5",
+    "ts-loader": "^9.4.2",
+    "typedoc": "^0.23.26",
+    "typedoc-plugin-katex": "^0.1.2",
+    "typescript": "^4.9.5",
+    "webpack": "^5.76.1",
+    "webpack-cli": "^5.0.1"
   }
 }
