--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "tslane",
-  "version": "1.3.0",
+  "version": "1.4.0",
   "description": "A template for creating TypeScript libraries",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
@@ -12,26 +12,28 @@
     "coverage": "npx jest --collectCoverage",
     "doc": "npx typedoc --out docs src",
     "format": "npx prettier --parser typescript --write ./src ./tests",
-    "lint": "npx eslint . --ext .ts",
+    "lint": "npx eslint ./src --ext .ts",
+    "pack": "npx del-cli ./dist && npm run build && node prepack && cd dist && npm pack && cd ..",
     "test": "npx jest"
   },
   "keywords": [],
   "author": "",
   "license": "GPL3",
   "devDependencies": {
-    "@types/jest": "^29.4.1",
-    "@typescript-eslint/eslint-plugin": "^5.55.0",
-    "@typescript-eslint/parser": "^5.55.0",
-    "eslint": "^8.36.0",
-    "jest": "^29.5.0",
-    "npm-dts-webpack-plugin": "^1.3.12",
-    "prettier": "^2.8.4",
-    "ts-jest": "^29.0.5",
-    "ts-loader": "^9.4.2",
-    "typedoc": "^0.23.26",
-    "typedoc-plugin-katex": "^0.1.2",
-    "typescript": "^4.9.5",
-    "webpack": "^5.76.1",
-    "webpack-cli": "^5.0.1"
+    "@types/jest": "^29.5.14",
+    "@typescript-eslint/eslint-plugin": "^8.26.0",
+    "@typescript-eslint/parser": "^8.26.0",
+    "del-cli": "^6.0.0",
+    "eslint": "^9.21.0",
+    "eslint-plugin-tsdoc": "^0.4.0",
+    "jest": "^29.7.0",
+    "npm-dts-webpack-plugin": "^1.3.13",
+    "prettier": "^3.5.3",
+    "ts-jest": "^29.2.6",
+    "ts-loader": "^9.5.2",
+    "typedoc": "^0.27.9",
+    "typescript": "^5.8.2",
+    "webpack": "^5.98.0",
+    "webpack-cli": "^6.0.1"
   }
 }
